--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: beacon
-          image: onlydole/beacon:REPLACE_ME
+          image: onlydole/beacon:1.19.1
           ports:
             - containerPort: 80
