--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: beacon
+  annotations:
+    fluxcd.io/automated: "true"
   labels:
     app: beacon
 spec:
